
syntax = "proto3";
package rFarm;

option java_package = "com.imageworks.spcue.grpc.rfarm";
option java_multiple_files = true;

// Interface for issuing commands to an RFarm instance.

// -------- Services --------]

// Implemented by the RFarm server. Called by cuebot and tools.
service RFarmInterface {
    // Return the HostReport
    rpc ReportFrameComplete(RFarmReportFrameCompleteRequest) returns (RFarmReportFrameCompleteResponse);
    rpc ReportJobComplete(RFarmReportJobCompleteRequest) returns (RFarmReportJobCompleteResponse);
}

// -------- Primary Message Types --------]

message RenderHost {
    string id = 1;
    string name = 2;
};

message RunningFrameInfo {
    string job_id = 1;
    string frame_id = 2;
    string layer_id = 3;
};

message FrameCompleteReport {
    RenderHost host = 1;
    RunningFrameInfo frame = 2;
}

message JobCompleteReport {
    string job_id = 1;
}


// -------- Requests & Responses --------]

// RFarmReportFrameComplete
message RFarmReportFrameCompleteRequest {
    FrameCompleteReport frame_complete_report = 1;
}
message RFarmReportFrameCompleteResponse {} // Empty

// RFarmReportJobComplete
message RFarmReportJobCompleteRequest {
    JobCompleteReport job_complete_report = 1;
}
message RFarmReportJobCompleteResponse {} // Empty
